Fix z-index issue

--- a/sass/projectCards.sass
+++ b/sass/projectCards.sass
@@ -71,7 +71,6 @@
             transition: 0.5s all
             position: absolute
             top: 5em
-            z-index: 2
             height: calc(min(25vh,12.75em))
         // closed
         &:not(input:checked + label)
